<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 "Hawken Companion App"
  ~
  ~ This file is part of Hawken Companion App.
  ~
  ~ Hawken Companion App is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses.
  -->

<resources>

    <!--Login Activity-->
    <string name="login_activity_name">Hawken Companion App</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_details_invalid">Login details are invalid.</string>

    <!--Forgotten Password Activity-->
    <string name="forgot_password_activity_name">Forgotten Password</string>
    <string name="send_link">Send Link</string>
    <string name="password_reset_success_msg">Successfully sent reset code</string>
    <string name="password_reset_unsuccess_msg">Email address not found</string>
    <string name="invalid_email">Please enter a valid email address</string>

    <!--User Activity-->
    <string name="user_area_activity_name">User Account</string>

    <!--User Account Area-->
    <string name="account_info_title"><u>Account Info</u></string>
    <string name="callsign_title">Callsign</string>
    <string name="hawken_credits">Hawken Credits</string>
    <string name="meteor_credits">Meteor Credits</string>

    <!--Personal Account Area-->
    <string name="personal_info_title"><u>Personal Info</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>

    <!--Regional Account Area-->
    <string name="regional_info_title"><u>Regional Info</u></string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="postal_code">Postal Code</string>

    <!--About Section-->
    <string name="about_activity_name">About</string>

    <!--UI Spinner-->
    <string name="spinner_title_loading">Loading</string>
    <string name="spinner_msg_logging_in">Logging in</string>
    <string name="spinner_msg_obtaining_info">Obtaining account information</string>
    <string name="spinner_msg_sending_password_reset_email">Sending password reset code</string>

    <!--Action Bar Content-->
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_offline_mode">Offline mode</string>

    <!--Welcome Fragment Title-->
    <string name="welcome_fragment_title">Welcome</string>

    <!--Navigation Drawer Items. We use 'Category:' to identify a category-->
    <string-array name="nav_drawer_categories_and_items">
        <item>Category: Account</item>
            <item>My Account</item>
        <item>Category: Game Guide</item>
            <item>Mechs</item>
            <item>Weapons</item>
            <item>Items</item>
            <item>Maps</item>
            <item>Progression</item>
        <item>Category: Media</item>
            <item>Videos</item>
            <item>Screenshots</item>
            <item>Wallpapers</item>
            <item>Artwork</item>
            <item>Comics</item>
            <item>Fan Kit</item>
        <item>Category: Community</item>
            <item>IRC Chat</item>
            <item>Forums</item>
        <item>Category: News</item>
            <item>Hawken News</item>
    </string-array>

    <!--Tab Names On the Game Guide Mech Fragment-->
    <string name="mech_tab_light">Light</string>
    <string name="mech_tab_medium">Medium</string>
    <string name="mech_tab_heavy">Heavy</string>

</resources>
